...
                android:text="My Profile"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#156f77"/>

            <ImageButton
                android:id="@+id/bt_settings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="185dp"
                android:background="@drawable/settings_dots"
                android:scaleY="0.45"/>
...
                android:text="Islamabad"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#918b8b"/>

            <Button
                android:id="@+id/sessions_button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gold_rounded_box"
                android:text="Booked Sessions"
                android:textSize="11sp"
                android:textColor="#156f77"/>

        </RelativeLayout>

        <LinearLayout
...

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:background="#156f77"
...
            android:layout_height="35dp"
            android:background="@drawable/home_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

        <Button
            android:id="@+id/btsearch"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/search_taskbar"
            android:scaleY="0.7"
...
            android:layout_marginStart="50dp"
            android:background="@drawable/chat_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

        <Button
            android:id="@+id/btprofile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/profile_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

...
