...
                    android:layout_alignStart="@id/back_button"
                    android:layout_below="@id/back_button"
                    android:layout_marginTop="10dp"
                    />
                
                <EditText
                    android:id="@+id/searchbox"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@id/letfind_text"
                    android:background="@drawable/search_box"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="Search"
                    android:paddingLeft="35dp"
                    android:paddingBottom="5dp"/>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/letfind_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="35dp"
                    android:background="#00FFFFFF"/>
...
